Fix know-more button alignment

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -77,6 +77,9 @@
     padding: 0;
   }
   .home-container > div {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
     width: 100%;
     margin-top: 0;
     margin-bottom: 0;
